--- a/src/main/resources/screens/chooseSandwichScreen.fxml
+++ b/src/main/resources/screens/chooseSandwichScreen.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.mibocatafx.controllers.ChooseSandwichController">
     <top>
         <AnchorPane prefHeight="60.0" style="-fx-background-color: #25A4F4;" BorderPane.alignment="CENTER">
             <children>
@@ -22,7 +22,7 @@
                             <graphic>
                                 <ImageView fitHeight="150.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
-                                        <Image url="@../assets/user%20(1)%201.png" />
+                                        <Image url="@../assets/user.png" />
                                     </image>
                                 </ImageView>
                             </graphic>
@@ -34,7 +34,7 @@
                             <graphic>
                                 <ImageView fitHeight="150.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
-                                        <Image url="@../assets/invoice%202.png" />
+                                        <Image url="@../assets/invoice.png" />
                                     </image>
                                 </ImageView>
                             </graphic>
@@ -46,7 +46,7 @@
                             <graphic>
                                 <ImageView fitHeight="150.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
-                                        <Image url="@../assets/calendar%20(1)%201.png" />
+                                        <Image url="@../assets/calendario.png" />
                                     </image>
                                 </ImageView>
                             </graphic>
@@ -69,8 +69,8 @@
                 </Label>
                 <HBox alignment="CENTER" layoutX="343.0" layoutY="17.0" spacing="40.0" AnchorPane.rightAnchor="14.0">
                     <children>
-                        <Label text="No has seleccionado ningún pedido" textFill="WHITE" />
-                        <Button mnemonicParsing="false" style="-fx-background-color: #25A4F4; -fx-border-color: white; -fx-border-radius: 10px; -fx-background-radius: 10px;" text="Pedir" textFill="WHITE">
+                        <Label fx:id="bottomLabel" text="No has seleccionado ningún pedido" textFill="WHITE" />
+                        <Button fx:id="orderButton" mnemonicParsing="false" style="-fx-background-color: #25A4F4; -fx-border-color: white; -fx-border-radius: 10px; -fx-background-radius: 10px;" text="Pedir" textFill="WHITE">
                             <padding>
                                 <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
                             </padding>
@@ -94,7 +94,7 @@
                                   <children>
                                       <ImageView fitHeight="150.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                                           <image>
-                                              <Image url="@../assets/copo-de-nieve%201.png" />
+                                              <Image url="@../assets/copo.png" />
                                           </image>
                                       </ImageView>
                                       <Label text="Bocadillo Frío">
@@ -106,12 +106,12 @@
                               </HBox>
                               <VBox fx:id="bocadilloFrio" alignment="CENTER" maxHeight="1.7976931348623157E308" spacing="30.0" style="-fx-border-color: #25A4F4; -fx-border-radius: 20px;">
                                   <children>
-                                      <Label text="Bocadillo de atún">
+                                      <Label fx:id="labelBocadilloFrio" text="Bocadillo de atún">
                                           <font>
                                               <Font size="14.0" />
                                           </font>
                                       </Label>
-                                      <Label text="Descripción del bocadillo">
+                                      <Label fx:id="descripcionBocadilloFrio" text="Descripción del bocadillo">
                                           <font>
                                               <Font size="14.0" />
                                           </font>
@@ -135,7 +135,7 @@
                                               </ImageView>
                                           </children>
                                       </HBox>
-                                      <Label text="2€">
+                                      <Label fx:id="precioFrio" text="2€">
                                           <font>
                                               <Font size="14.0" />
                                           </font>
@@ -163,7 +163,7 @@
                           <children>
                               <ImageView fitHeight="150.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                                   <image>
-                                      <Image url="@../assets/flame%201.png" />
+                                      <Image url="@../assets/flame.png" />
                                   </image>
                               </ImageView>
                               <Label prefHeight="25.0" text="Bocadillo Caliente">
@@ -175,12 +175,12 @@
                       </HBox>
                       <VBox fx:id="bocadilloCaliente" alignment="CENTER" maxHeight="1.7976931348623157E308" spacing="30.0" style="-fx-border-color: #25A4F4; -fx-border-radius: 20px;">
                           <children>
-                              <Label text="Bocadillo de atún">
+                              <Label fx:id="labelBocadilloCaliente" text="Bocadillo de atún">
                                   <font>
                                       <Font size="14.0" />
                                   </font>
                               </Label>
-                              <Label text="Descripción del bocadillo">
+                              <Label fx:id="descripcionBocadilloCaliente" text="Descripción del bocadillo">
                                   <font>
                                       <Font size="14.0" />
                                   </font>
@@ -204,7 +204,7 @@
                                       </ImageView>
                                   </children>
                               </HBox>
-                              <Label text="2€">
+                              <Label fx:id="precioCaliente" text="2€">
                                   <font>
                                       <Font size="14.0" />
                                   </font>
