--- a/src/main/resources/screens/cocina.fxml
+++ b/src/main/resources/screens/cocina.fxml
@@ -1,47 +1,149 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <top>
-       <AnchorPane prefHeight="70.0" style="-fx-background-color: #25A4F4;" BorderPane.alignment="CENTER">
+       <AnchorPane style="-fx-background-color: #25A4F4;">
            <children>
                <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="14.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="6.393957519531256" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="386.0" AnchorPane.topAnchor="6.0">
                    <image>
                        <Image url="@../assets/Logo2.png" />
                    </image>
                </ImageView>
-            <Button layoutX="484.0" layoutY="22.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" text="Cerrar Sesión" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="484.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="22.0" />
+            <HBox fx:id="logOutButton" alignment="BOTTOM_RIGHT" layoutX="499.0" layoutY="18.0" AnchorPane.bottomAnchor="18.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="18.0">
+               <children>
+                  <Button mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-radius: 10;" text="Cerrar Sesión" textFill="WHITE">
+                     <padding>
+                        <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+                     </padding>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+               </children>
+            </HBox>
            </children>
        </AnchorPane>
    </top>
    <center>
       <BorderPane prefHeight="284.0" prefWidth="473.0" BorderPane.alignment="CENTER">
          <top>
-            <AnchorPane BorderPane.alignment="CENTER">
-               <children>
-                  <HBox alignment="CENTER" layoutX="45.0" prefHeight="38.0" prefWidth="510.0" spacing="20.0" style="-fx-border-color: #25A4F4; -fx-border-radius: 10;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="45.0" AnchorPane.rightAnchor="45.0" AnchorPane.topAnchor="0.0">
-                     <children>
-                        <TextField promptText="Nombre..." />
-                        <TextField promptText="Apellidos..." />
-                        <ComboBox prefWidth="150.0" promptText="Curso" />
-                        <DatePicker />
-                     </children>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                  </HBox>
-               </children>
+            <HBox alignment="CENTER" BorderPane.alignment="CENTER">
                <BorderPane.margin>
                   <Insets top="15.0" />
-               </BorderPane.margin></AnchorPane>
+               </BorderPane.margin>
+               <children>
+                  <AnchorPane prefHeight="47.0" prefWidth="600.0">
+                     <children>
+                        <HBox alignment="CENTER" layoutX="14.0" spacing="20.0" style="-fx-border-color: #25A4F4; -fx-border-radius: 10;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="76.0" AnchorPane.topAnchor="0.0">
+                           <children>
+                              <TextField fx:id="nameInput" promptText="Nombre..." />
+                              <TextField fx:id="lastNameInput" promptText="Apellidos..." />
+                              <ComboBox fx:id="cursesBox" prefWidth="150.0" promptText="Curso" style="-fx-background-color: white; -fx-border-color: #25A4F4; -fx-border-radius: 10; -fx-background-radius: 10;" />
+                              <DatePicker fx:id="calendarInput" />
+                           </children>
+                           <padding>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </padding>
+                        </HBox>
+                        <Button fx:id="searchButton" layoutX="543.0" layoutY="4.0" mnemonicParsing="false" style="-fx-background-color: white; -fx-border-color: #25A4F4; -fx-border-radius: 10; -fx-background-radius: 10;" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="543.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="2.0">
+                           <graphic>
+                              <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../assets/search.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                           <padding>
+                              <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                           </padding>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
+                     </children>
+                  </AnchorPane>
+               </children>
+            </HBox>
          </top>
+         <center>
+            <TableView fx:id="table" BorderPane.alignment="CENTER">
+              <columns>
+                <TableColumn prefWidth="75.0" text="C1" />
+                <TableColumn prefWidth="75.0" text="C2" />
+              </columns>
+               <BorderPane.margin>
+                  <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+               </BorderPane.margin>
+            </TableView>
+         </center>
       </BorderPane>
    </center>
    <bottom>
-      <AnchorPane prefHeight="45.0" prefWidth="600.0" style="-fx-background-color: #25A4F4;" BorderPane.alignment="CENTER" />
+      <AnchorPane prefHeight="60.0" style="-fx-background-color: #25A4F4;" BorderPane.alignment="CENTER">
+         <children>
+            <Pane fx:id="numPages" layoutX="14.0" layoutY="16.0">
+               <children>
+                  <ComboBox promptText="10" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-radius: 10;">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                  </ComboBox>
+               </children>
+            </Pane>
+            <Pane layoutX="492.0" layoutY="22.0" prefWidth="94.0" AnchorPane.bottomAnchor="21.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="22.0">
+               <children>
+                  <Label text="1 - 10 de 100" textFill="WHITE">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
+            <HBox alignment="CENTER" layoutX="170.0" layoutY="18.0" prefWidth="261.0" spacing="20.0" AnchorPane.bottomAnchor="17.0" AnchorPane.leftAnchor="170.0" AnchorPane.rightAnchor="169.0" AnchorPane.topAnchor="18.0">
+               <children>
+                  <Button fx:id="previousPage" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-radius: 10;" text="&lt; Anterior" textFill="WHITE">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                     <padding>
+                        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                     </padding>
+                  </Button>
+                  <Label fx:id="pagesCount" text="1/7" textFill="WHITE">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+                  <Button fx:id="nextPage" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-radius: 10;" text="Siguiente &gt;" textFill="WHITE">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                     <padding>
+                        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                     </padding>
+                  </Button>
+               </children>
+            </HBox>
+         </children></AnchorPane>
    </bottom>
 </BorderPane>
